--- a/main.html
+++ b/main.html
@@ -80,8 +80,8 @@
     const grid = document.querySelector('.grid');
     const cells = [];
     const words = []
-    const alphabet = 'דימלכסיידיעאהבהגבתיז';
-    const solution = ["כלמידיה", "זיבה", "איידס", "עגבת"];
+    const alphabet = 'שלאתתימללורוווזכגצדמ';
+    const solution = ["אלמוג", "מדוזות", "כריש", "צוללת"];
     let word = []
     let selectedColor = 'orange';
 
