added instructions window

--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@
     <div class="modal-content">
         <span class="close">&times;</span><br>
         <p>בלוח האותיות מסתתרות 4-5 מילים עם נושא משותף שמשתמשות בכל אות פעם אחת בלבד ויכולות להיווצר מכל כיוון מלבד אלכסון.<br>על השחקן למצוא את המילים הנכונות ולגלות מהו הנושא המשותף.</p>
+        <br>
+        <img src="instructions.gif" class="center">
     </div>
   </div>
 
