--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     direction: rtl;
     line-height: 1.5;
     background-color: rgba(0, 0, 0, 0.5);
-    /*text-align: center;*/
-}
-
-.modal-content {
+  }
+  
+  .modal-content {
+    text-align: center;
     background-color: #fefefe;
     margin: 20% auto;
     padding: 20px;
@@ -106,12 +106,11 @@
 </head>
 <body>
   <div id="instructionModal" class="modal">
-    <!-- Modal content -->
     <div class="modal-content">
         <span class="close">&times;</span><br>
         <p>בלוח האותיות מסתתרות 4-5 מילים עם נושא משותף שמשתמשות בכל אות פעם אחת בלבד ויכולות להיווצר מכל כיוון מלבד אלכסון.<br>על השחקן למצוא את המילים הנכונות ולגלות מהו הנושא המשותף.</p>
         <br>
-        <img src="instructions.gif" class="center">
+        <img src="instructions.gif">
     </div>
   </div>
 
@@ -133,7 +132,6 @@
     let word = []
     let selectedColor = 'orange';
 
-    // Create grid cells
     function createGridCells() {
       grid.innerHTML = '';
       cells.length = 0;
@@ -152,7 +150,6 @@
 
     createGridCells();
 
-    // Handle cell click
     function handleCellClick(event) {
       const cell = event.target;
       const index = cells.indexOf(cell);
@@ -228,7 +225,6 @@
       return false;
     }
 
-    // Start new word
     function startNewWord() {
       words.push(word);
       word = [];
@@ -295,7 +291,6 @@
       return s;
     }
 
-    // Get random color
     function getRandomColor() {
       const letters = '0123456789ABCDEF';
       let color = '#';
@@ -305,24 +300,18 @@
       return color;
     }
 
-    // script.js
-    // Get the modal
+    // Introduction instructions popup
     var modal = document.getElementById("instructionModal");
-
-    // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
 
-    // When the page loads, display the modal
     window.onload = function() {
         modal.style.display = "block";
     }
 
-    // When the user clicks on <span> (x), close the modal
     span.onclick = function() {
         modal.style.display = "none";
     }
 
-    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function(event) {
         if (event.target == modal) {
             modal.style.display = "none";
