--- a/index.html
+++ b/index.html
@@ -4,105 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title></title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      font-family: Arial, sans-serif;
-    }
-    
-    .word {
-      font-size: 36px;
-      font-weight: bold;
-      margin-bottom: 20px;
-      direction: rtl;
-      height:7vh;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(5, 50px);
-      grid-template-rows: repeat(4, 50px);
-      gap: 5px;
-      margin-bottom: 20px;
-    }
-
-    .cell {
-      background-color: #f0f0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 24px;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: transform 0.2s ease-in-out;
-    }
-
-    .cell:hover {
-      transform: scale(1.2);
-    }
-
-    .cell.disabled {
-      cursor: not-allowed;
-      pointer-events: none;
-      opacity: 0.65;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border-radius: 5px;
-      margin-bottom: 10px;
-    }
-
-    .wordList {
-      font-size: 25px;
-      font-weight: bold;
-      height:7vh;
-      direction: rtl;
-    }
-
-    .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    direction: rtl;
-    line-height: 1.5;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  
-  .modal-content {
-    text-align: center;
-    background-color: #fefefe;
-    margin: 20% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    max-width: 600px;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
-  </style>
+  <link rel="stylesheet" href="style-header.css"/>
 </head>
 <body>
   <div id="instructionModal" class="modal">
