changed button wording

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div class="word"></div>
   <div class="grid"></div>
-  <button onclick="startNewWord()">מילה חדשה</button>
+  <button onclick="startNewWord()">הוסף מילה</button>
   <button onclick="cancelSelection()">ביטול</button>
   <button onclick="nextPuzzle()">פאזל הבא</button>
   <div class="wordList"></div>
