new puzzles and order

--- a/index.html
+++ b/index.html
@@ -32,21 +32,25 @@
     const colors = ['#4793AF', '#FFC470', '#DD5746', '#8B322C', '#87A922', '#E178C5'];
     const cells = [];
     const atlas = [
-      'ילטראצקיוקמשחתטשמולמ',
-      'כפעבומפוהכטבתנוהנראי',
-      'דימלכסיידיעאהבהגבתיז',
+      'כקוגסחולצכורוהתליבמו',
       'שלאתתימללורוווזכגצדמ',
+      'כפעבומפוהכטבתנוהנראי',
+      'ורשערשהחכבכויפרבכתמש',
+      'דימלכסיידיעאהבהגבתיז',
+      'ילטראצקיוקמשחתטשמולמ',
     ];
     const solution = [
-      ["ארטיק", "מציל", "חול", "שמש", "מטקות"],
-      ["מטה", "כפפות", "ארנב", "יונה", "כובע"],
-      ["כלמידיה", "זיבה", "עגבת", "איידס"],
+      ["ירוק","כתום","צהוב","כחול","סגול"],
       ["כריש", "אלמוג", "צוללת", "מדוזות"],
+      ["מטה", "כפפות", "ארנב", "יונה", "כובע"],
+      ["שורש","כוכב","פרש","מתיחה","עכבר"],
+      ["כלמידיה", "זיבה", "עגבת", "איידס"],
+      ["ארטיק", "מציל", "חול", "שמש", "מטקות"],
     ];
     
     let word = []
     let words = [];
-    let puzzleNumber = 3;
+    let puzzleNumber = 0;
     let currColorIndex = 0;
 
     function createGridCells() {
